# argus

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  api_test.py  calc.py  dockerfile  exercise_1.py  exercise_2.py  main.py  pyproject.toml
.githooks/: commit-msg
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATES/: feature.md
.github/workflow/: tests.yml
.github/workflows/: ci.yml  commit-message.yml
clients/: exchangerate_client.py
docs/: client_api.md  forecast_research.md  gui.md  research-data-sources  research-databases-and-storage.md  research-gui-for-py-projects.md  research-useful-market-metrics.md  roadmap.md
src/: calc.py  main.py
src/argus/: config.py  main.py
src/argus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/argus/clients/: exchangerate_client.py  mock_client.py  yfinance_client.py  yfinancy_client.py
src/argus/domain/: internal_models.py  validation.py
src/argus/gui/: app.py
src/argus/services/: calculator_service.py  conversion_service.py  timeseries_service.py
src/clients/: exchangerate_client.py
src/docs/: client_api.md
src/fx_converter_lab/: config.py  main.py
src/fx_converter_lab/cli/: interface.py
src/fx_converter_lab/clients/: exchangerate_client.py  mock_client.py
src/legacy/: debug_main.py
src/legacy/cli/: interface.py
temp/: basic_calc.py  basic_input.py
tests/: test_exchangerate_client.py  test_internal_models.py  test_timeseries_service.py  test_trend_metrics.py  test_validation_domain.py  test_yfinance_client.py
(+17 files in other folders)
