[project]
name = "fx-converter-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [

    "matplotlib",
    "numpy",
    "pandas",
    "python-dotenv"
    "pytest",
    "requests",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]